apps/media/plex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
spec:
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - pc
      containers:
        - name: plex
          image: lscr.io/linuxserver/plex:latest
          ports:
            - containerPort: 32400
          volumeMounts:
            - mountPath: /tv
              subPath: tv
              name: data
            - mountPath: /movies
              subPath: movies
              name: data
            - mountPath: /config
              name: config
      volumes:
        - name: data
          nfs:
            path: /mnt/disk1/media
            server: 192.168.0.14
        - name: config
          persistentVolumeClaim:
            claimName: plex-config
