apps/media/plex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
spec:
  selector:
    app: plex
  ports:
    - port: 32400
      targetPort: 32400
---
apiVersion: v1
kind: Service
metadata:
  name: plex-lb
spec:
  selector:
    app: plex
  ports:
    - port: 32400
      targetPort: 32400
  type: LoadBalancer
